--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.16.3",
-    "pg-migrate": "^2.0.1"
+    "pg-migrate": "^2.0.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
